@@ -7,9 +7,10 @@
   * Added XML::Node#attribute_nodes
   * Added XML::Attr
   * Removed CSS::SelectorHandler and XML::XPathHandler
-  * XML::NodeSet implements to_xml
   * XML::Node#attributes returns an Attr node for the value.
+  * XML::Node#delete added.
   * XML::NodeSet#inner_html added.
+  * XML::NodeSet implements to_xml
 
 === 1.1.0
 
